alsadir = $(datadir)/alsa/cards
cfg_files = aliases.conf \
	ATIIXP.conf \
	ATIIXP-SPDMA.conf \
	ATIIXP-MODEM.conf \
	AU8810.conf \
	AU8820.conf \
	AU8830.conf \
	Audigy.conf \
	Audigy2.conf \
	Aureon51.conf \
	Aureon71.conf \
	Azalia.conf \
	CA0106.conf \
	CMI8338.conf \
	CMI8338-SWIEC.conf \
	CMI8738-MC6.conf \
	CS46xx.conf \
	EMU10K1.conf \
	EMU10K1X.conf \
	ENS1370.conf \
	ENS1371.conf \
	ES1968.conf \
	FM801.conf \
	GUS.conf \
	ICE1712.conf \
	ICE1724.conf \
	ICH.conf \
	ICH4.conf \
	ICH-MODEM.conf \
	Maestro3.conf \
	NFORCE.conf \
	RME9636.conf \
	RME9652.conf \
	SI7018.conf \
	TRID4DWAVENX.conf \
	YMF744.conf \
	VIA686A.conf \
	VIA8233.conf \
	VIA8233A.conf \
	VIA8237.conf \
	VX222.conf \
	VXPocket.conf \
	VXPocket440.conf \
\
	aliases.alisp

alsa_DATA = $(cfg_files)

SI7018dir = $(datadir)/alsa/cards/SI7018
SI7018_files = \
	SI7018/sndoc-mixer.alisp \
	SI7018/sndop-mixer.alisp
SI7018_DATA = $(SI7018_files)

EXTRA_DIST = \
	$(cfg_files) \
	$(SI7018_files)
