cfg_files = default.conf front.conf rear.conf center_lfe.conf side.conf\
	    surround40.conf surround41.conf \
	    surround50.conf surround51.conf \
	    surround71.conf iec958.conf modem.conf \
	    dmix.conf dsnoop.conf \
	    dpl.conf

EXTRA_DIST = $(cfg_files)

alsadir = $(datadir)/alsa/pcm
alsa_DATA = $(cfg_files)
