SUBDIRS=\
broadwell-rt286 \
broxton-rt298 \
bytcr-rt5651 \
chtrt5645 \
chtrt5645-mono-speaker-analog-mic \
DAISY-I2S \
DB410c \
GoogleNyan \
gpd-win-pocket-rt5645 \
HDAudio-Gigabyte-ALC1220DualCodecs \
HDAudio-Lenovo-DualCodecs \
PandaBoard \
PandaBoardES \
PAZ00 \
SDP4430 \
skylake-rt286 \
TECLAST-X80Pro-Defaultstring-CherryTrailCR \
tegraalc5632 \
VEYRON-I2S
