SUBDIRS=\
ASUSTeKCOMPUTERINC.-T100HAN-1.0-T100HAN \
broadwell-rt286 \
broxton-rt298 \
bytcr-rt5651 \
chtrt5645 \
chtrt5645-mono-speaker-analog-mic \
DAISY-I2S \
DB410c \
Dell-WD15-Dock \
GoogleNyan \
gpd-win-pocket-rt5645 \
HDAudio-Gigabyte-ALC1220DualCodecs \
HDAudio-Lenovo-DualCodecs \
LENOVO-80XF-LenovoMIIX320_10ICR-LNVNB161216 \
PandaBoard \
PandaBoardES \
PAZ00 \
SDP4430 \
skylake-rt286 \
TECLAST-X80Pro-Defaultstring-CherryTrailCR \
tegraalc5632 \
VEYRON-I2S
