SUBDIRS=\
ASUSTeKCOMPUTERINC.-T100HAN-1.0-T100HAN \
broadwell-rt286 \
broxton-rt298 \
bytcr \
bytcr-rt5640 \
bytcr-rt5640-mono-spk-dmic1-mic \
bytcr-rt5640-mono-spk-in1-mic \
bytcr-rt5640-mono-spk-in3-mic \
bytcr-rt5640-stereo-spk-dmic1-mic \
bytcr-rt5640-stereo-spk-in1-mic \
bytcr-rt5640-stereo-spk-in3-mic \
bytcr-rt5651 \
bytcr-rt5651-mono-spk-in1-mic \
bytcr-rt5651-mono-spk-in2-mic \
bytcr-rt5651-mono-spk-in2-mic-hp-swapped \
bytcr-rt5651-stereo-spk-in1-mic \
bytcr-rt5651-stereo-spk-in2-mic \
bytcr-rt5651-stereo-spk-in12-mic \
chtnau8824 \
chtrt5645 \
chtrt5645-mono-speaker-analog-mic \
cube-i1_TF-Defaultstring-CherryTrailCR \
DAISY-I2S \
DB410c \
Dell-WD15-Dock \
GoogleNyan \
gpd-win-pocket-rt5645 \
HDAudio-Gigabyte-ALC1220DualCodecs \
HDAudio-Lenovo-DualCodecs \
LENOVO-80XF-LenovoMIIX320_10ICR-LNVNB161216 \
nau8824 \
PandaBoard \
PandaBoardES \
PAZ00 \
PIPO-W2S-Defaultstring-CherryTrailCR \
rt5640 \
rt5651 \
SDP4430 \
skylake-rt286 \
TECLAST-X80Pro-Defaultstring-CherryTrailCR \
tegraalc5632 \
VEYRON-I2S
